CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.7

	- The sample raster drivers did not properly handle SIGTERM
	  (STR #2770)
	- The scheduler sent notify_post() messages too often on
	  Mac OS X.
	- Kerberos access to the web interface did not work
	  (STR #2748)
	- The scheduler did not support "AuthType Default" in IPP
	  policies (STR #2749)
	- The scheduler did not support the "HideImplicitMembers"
	  directive as documented (STR #2760)
	- "make check" didn't return a non-zero exit code on
	  error (STR #2758)
	- The scheduler incorrectly logged AUTH_foo environment
	  variables in debug mode (STR #2751)
	- The image filters inverted PBM files (STR #2746)
	- cupsctl would crash if the scheduler was not running
	  (STR #2741)
	- The scheduler could crash when printing using a port
	  monitor (STR #2742)
	- The scheduler would crash if PAM was broken (STR #2734)
	- The image filters did not work with some CMYK JPEG files
	  produced by Adobe applications (STR #2727)
	- The Mac OS X USB backend did not work with printers that
	  did not report a make or model.
	- The job-sheets option was not encoded properly (STR #2715)
	- The scheduler incorrectly complained about missing LSB
	  PPD directories.


CHANGES IN CUPS V1.3.6

	- Documentation updates (STR #2646, STR #2647, STR #2649)
	- Fixed a problem with the web interface "Use Kerberos
	  Authentication" check box (STR #2703)
	- The scheduler unconditionally overwrote the printer-state-
	  message with "process-name failed" when a filter or backend
	  failed, preventing a useful error message from being shown
	  to the user.
	- Policies on CUPS-Move-Job didn't work as expected (STR
	  #2699)
	- The configure script only supported D-BUS on Linux
	  (STR #2702)
	- The scheduler did not support </LimitExcept> (STR #2701)
	- The scheduler did not reset the job-hold-until attribute
	  after a job's hold time was reached.
	- The scheduler did not support printer supply attributes
	  (STR #1307)